# zsh-ai-assistant

./: .gitignore  .mypyignore  .shellcheckrc  AGENTS.md  COMPLETION_SUMMARY.md  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LINTING_SUMMARY.md  PR_SUMMARY.md  README.md  SHELLSPEC_SETUP.md  SIGTERM_IMPLEMENTATION.md  TESTING_SUMMARY.md  add_type_annotations.py  pyproject.toml  run_shellspec.sh  setup.cfg  test_correct_octal.sh  test_plugin_spinner.sh  test_printf_array.sh  test_spinner.sh  test_spinner_manual.sh  test_unicode.sh  test_unicode2.sh  test_unicode3.sh  test_unicode4.sh  zsh-ai-assistant.plugin.zsh
.github/: CONTRIBUTING.md
.github/workflows/: lint.yml  test_integration_only.yml  tests.yml
src/: __init__.py
src/zsh_ai_assistant/: __init__.py  ai_service.py  chat_history.py  cli.py  config.py  interactive_chat.py  interfaces.py
src/zsh_ai_assistant/mocks/: __init__.py
tests/integration/: test_interactive.py
tests/python/: conftest.py  test_ai_service.py  test_chat_history.py  test_cli.py  test_config.py  test_interactive_chat.py  test_interfaces.py
tests/shell/: spec_helper.sh  test_interactive.py
tests/shell/spec/: animation_spec.sh  chat_spec.sh  command_generation_spec.sh  directory_detection_spec.sh  plugin_initialization_spec.sh  spec_helper.sh  translation_spec.sh
tests/shell/spec/support/: before_all.sh
tests/shell/spec/support/modules/: plugin_loader.sh
tools/: add_type_annotations.py  test_add_type_annotations.py
