[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zsh-ai-assistant"
version = "0.1.0"
description = "A zsh plugin that integrates AI assistance into your shell"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "langchain>=0.2.17",
    "langchain-core>=0.2.0",
    "langchain-openai>=1.1.3",
    "openai>=2.2.0",
    "pexpect>=4.9.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "types-pexpect>=4.9.0.20250916",
]

[project.optional-dependencies]
test = [
    "langchain-openai>=1.0.0",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/zsh-ai-assistant"
"Bug Tracker" = "https://github.com/yourusername/zsh-ai-assistant/issues"

[dependency-groups]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "types-requests>=2.0.0",
]

[tool.pytest.ini_options]
python_files = "test_*.py"
python_functions = "test_*"
testpaths = ["tests/python", "tests/shell"]
addopts = "--cov=src/zsh_ai_assistant --cov-report=html --cov-report=term-missing"

[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.flake8]
max-line-length = 120
ignore = ["E203", "W503"]
select = ["E", "F", "W", "B", "C", "T"]
per-file-ignores = [
    "tests/*: E501",
    "src/*: E501"
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false


